--- a/.github/workflows/crypto_email.yml
+++ b/.github/workflows/crypto_email.yml
@@ -2,31 +2,31 @@ name: 💹 Crypto INR Email Notifier
 
 on:
   schedule:
-    - cron: "*/30 * * * *"  # Runs every 30 minutes
-  workflow_dispatch:        # Allows manual trigger from GitHub UI
+    - cron: "*/30 * * * *"  # Every 30 minutes
+  workflow_dispatch:        # Manual trigger
 
 jobs:
   notify:
     runs-on: ubuntu-latest
 
     steps:
-    - name: ⬇️ Checkout Repository
-      uses: actions/checkout@v3
+      - name: ⬇️ Checkout Repository
+        uses: actions/checkout@v3
 
-    - name: 🐍 Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: '3.11'
+      - name: 🐍 Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
 
-    - name: 📦 Install Dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+      - name: 📦 Install Dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
-    - name: 🚀 Run Crypto INR Reporter
-      env:
-        EMAIL_ADDRESS: ${{ secrets.EMAIL_ADDRESS }}
-        EMAIL_PASSWORD: ${{ secrets.EMAIL_PASSWORD }}
-        TO_EMAIL: ${{ secrets.TO_EMAIL }}
-      run: |
-        python enhanced_crypto_report.py
+      - name: 🚀 Run Crypto INR Reporter
+        env:
+          EMAIL_ADDRESS: ${{ secrets.EMAIL_ADDRESS }}
+          EMAIL_PASSWORD: ${{ secrets.EMAIL_PASSWORD }}
+          TO_EMAIL: ${{ secrets.TO_EMAIL }}
+        run: |
+          python enhanced_crypto_report.py
